Добавление шифровки пароля Теперь можно полноценно добавлять пользователей и входить в окно редактирования информации о пользователе (без самого редактирования)

--- a/Production/CustomerMenuWindow.xaml
+++ b/Production/CustomerMenuWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:Production"
         mc:Ignorable="d"
         Title="CustomerMenuWindow" Height="258.157" Width="299.837"
-                xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes">
+                xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" ResizeMode="NoResize">
     <Grid Margin="-2,0,-3.429,1.143">
         <Grid.Background>
             <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
