--- a/Production/ChangeProduct.xaml
+++ b/Production/ChangeProduct.xaml
@@ -6,7 +6,8 @@
         xmlns:local="clr-namespace:Production"
         mc:Ignorable="d"
         Title="Изменить" Height="413.848" Width="553.805"
-                xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" d:DataContext="{d:DesignInstance Type=local:Product}">
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" 
+        d:DataContext="{d:DesignInstance Type=local:Product}" ResizeMode="NoResize">
     <Grid Margin="-2,0,-3.429,1.143">
         <Grid.Background>
             <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
