--- a/Production/ShopList.xaml
+++ b/Production/ShopList.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="Production.EmlpoyeeList"
+﻿<Window x:Class="Production.ShopList"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Production"
         mc:Ignorable="d"
-        Title="Сотрудники" Height="458.762" Width="800"       
+        Title="Точки выдачи" Height="458.762" Width="800"       
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" 
         d:DataContext="{d:DesignInstance Type=local:UserListViewModel}" ResizeMode="NoResize">
     <Window.Resources>
@@ -34,23 +34,19 @@
             <Border.Effect>
                 <DropShadowEffect BlurRadius="20" Color="Gray" ShadowDepth="2"/>
             </Border.Effect>
-            <ListBox Grid.Column="10" ItemsSource="{Binding Users}"
-                 SelectedItem="{Binding SelectedUser}" Margin="2,2,-0.143,2.286">
+            <ListBox Grid.Column="10" ItemsSource="{Binding Shops}"
+                 SelectedItem="{Binding SelectedShop}" Margin="2,2,-0.143,2.286">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
                         <StackPanel Margin="5">
                             <Grid>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="Auto"/>
-                                    <ColumnDefinition Width="5"/>
-                                    <ColumnDefinition Width="Auto"/>
                                 </Grid.ColumnDefinitions>
                                 <TextBlock FontSize="18" Grid.Column="0" Text="{Binding Path=Name}" />
-                                <TextBlock FontSize="18" Grid.Column="2" Text="{Binding Path=LastName}" />
                             </Grid>
-                            <TextBlock Text="{Binding Path=Role}" Width="Auto"/>
-                            <TextBlock Text="{Binding Path=PhoneNumber}"/>
-
+                            <TextBlock Text="{Binding Path=Adress}" Width="Auto"/>
+                            <TextBlock Text="{Binding Path=PostCode}"/>
                         </StackPanel>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
@@ -61,9 +57,9 @@
             <Border.Effect>
                 <DropShadowEffect BlurRadius="20" Color="Gray" ShadowDepth="2"/>
             </Border.Effect>
-            <StackPanel DataContext="{Binding SelectedUser}" Margin="1,0,0.286,-0.286" Grid.Column="1">
+            <StackPanel DataContext="{Binding SelectedShop}" Margin="1,0,0.286,-0.286" Grid.Column="1">
 
-                <TextBlock Text="Информация о выбранном работнике" Margin="10,0,0,0" Foreground="#FF457B9D" />
+                <TextBlock Text="Информация о магазине" Margin="10,0,0,0" Foreground="#FF457B9D" />
 
                 <Grid Margin="0,0,-0.286,0">
                     <Grid.ColumnDefinitions>
@@ -108,8 +104,9 @@
             </StackPanel>
         </Border>
         <Button Content="Изменить" Height="31" FontSize="15" IsEnabled="True" Background="#FF457B9D" Width="102" BorderBrush="#FF457B9D" Margin="275,241,36,0" Grid.Column="1" Command="{Binding ChangeCommand}" VerticalAlignment="Top" Click="Button_Click_1"/>
-        <Button Content="Зарегистрировать сотрудника" Height="31" FontSize="15" Background="#FF457B9D" BorderBrush="#FF457B9D" Margin="24,241,0,0" Command="{Binding AddCommand}" Grid.Column="1" VerticalAlignment="Top" HorizontalAlignment="Left" Width="244" RenderTransformOrigin="0.514,0.3" Click="Button_Click"/>
-        <Button Content="Уволить сотрудника" Height="31" FontSize="15" Background="#e63946" BorderBrush="#e63946" Margin="24,289,0,0" Command="{Binding DelCommand, UpdateSourceTrigger=PropertyChanged}" Grid.Column="1" VerticalAlignment="Top" HorizontalAlignment="Left" Width="191" RenderTransformOrigin="0.514,0.3" Click="Button_Click_2"/>
+        <Button Content="Новый пункт выдачи" Height="31" FontSize="15" Background="#FF457B9D" BorderBrush="#FF457B9D" Margin="24.143,241,0,0" Command="{Binding AddCommand}" Grid.Column="1" VerticalAlignment="Top" HorizontalAlignment="Left" Width="191" RenderTransformOrigin="0.514,0.3" Click="Button_Click"/>
+        <Button Content="Удалить пункт выдачи" Height="31" FontSize="15" Background="#e63946" BorderBrush="#e63946" Margin="24,289,0,0" Command="{Binding DelCommand, UpdateSourceTrigger=PropertyChanged}" Grid.Column="1" VerticalAlignment="Top" HorizontalAlignment="Left" Width="191" RenderTransformOrigin="0.514,0.3" Click="Button_Click_2"/>
     </Grid>
 </Window>
+
 
